# sidereal

./: .dockerignore  .gitignore  CLAUDE.md  CODEX_PROMPT.md  CODEX_PROMPT_AI_SEED_WORKER.md  CODEX_PROMPT_OFFLINE_QUALITY_SEEDS.md  CODEX_PROMPT_PERSONAL_TRANSIT_ESSAY.md  CODEX_PROMPT_PHASE3.md  CODEX_PROMPT_PHASE4.md  CODEX_PROMPT_PHASE5.md  CODEX_PROMPT_SAVE_MY_SKY_API.md  CODEX_PROMPT_SKYPACK.md  CODEX_PROMPT_SKYPACK_V2.md  CODEX_PROMPT_SKY_CHAT_API.md  CODEX_PROMPT_SKY_DAY.md  CODEX_PROMPT_SKY_LISTEN_API.md  CODEX_PROMPT_SKY_SPHERE.md  Dockerfile  IMPLEMENTATION_NOTES.md  RAILWAY.md  README.md  SPEC.md  SPEC_OFFLINE_QUALITY_SEEDS.md  SPEC_PERSONAL_PLANETARIUM.md  SPEC_PERSONAL_PLANETARIUM_V2.md  SPEC_PERSONAL_PLANETARIUM_V2_1.md  SPEC_PERSONAL_TRANSIT_ESSAY.md  SPEC_PUBLIC_SKY_DAY.md  SPEC_PUBLIC_TRANSITS_AND_AI_SEEDS.md  SPEC_SKY_BRIEF.md  SPEC_SKY_CHAT.md  SPEC_SKY_LISTEN.md  SPEC_SKY_VISUAL_SIMPLIFY.md  pyproject.toml  railway.toml
docs/: sky_sphere_v2_1.md
scripts/: railway-start.sh  smoke_phase4.sh  smoke_phase5.sh
tests/: frontend_ux.test.js  test_ai_seed_cli.py  test_ai_seed_offline.py  test_ai_seed_store.py  test_ai_seed_web_hook.py  test_ai_seed_worker.py  test_aspects.py  test_boundaries.py  test_chart_golden.py  test_cli_surface_acceptance.py  test_ephemeris.py  test_family_deepening.py  test_houses.py  test_interpretation_composer.py  test_interpretation_inventory_store.py  test_natal_auth.py  test_packaging_cli_contract.py  test_personal_web_api.py  test_phase3_cli.py  test_report_polish.py  test_saved_charts.py  test_scoped_gaps.py  test_seed3.py  (+24 more)
(+65 files in other folders)
